# AOC2024

./: CMakeLists.txt  main.cpp
aoc_2023_examples/: solution_tests.cpp
aoc_2023_examples/solutions/: all_solutions.h
aoc_2023_examples/solutions/days_1_to_5/: day_1.cpp  day_1.h  day_2.cpp  day_2.h
aoc_2023_examples/solutions/days_21_to_25/: day_22.cpp
solutions/2023/: 2023_solution_tests.cpp  all_solutions.h
solutions/2023/days_1_to_5/: day_1.cpp  day_2.cpp  day_3.cpp  day_3.h
solutions/2023/days_21_to_25/: day_21.cpp  day_21.h  day_22.h
solutions/2024/: 2024_single_solution.cpp  2024_solution_tests.cpp  all_solutions.h  common_header.h  day_x.cpp  day_x.h  question.txt
solutions/2024/days_11_to_20/: day_11.cpp  day_11.h  day_12.cpp  day_12.h  day_13.cpp  day_13.h  day_14.cpp  day_14.h  day_15.cpp  day_15.h  day_16.cpp  day_16.h  day_17.cpp  day_17.h  day_18.cpp  day_18.h  day_19.cpp  day_19.h  day_20.cpp  day_20.h
solutions/2024/days_1_to_10/: day_1.cpp  day_1.h  day_10.cpp  day_10.h  day_2.cpp  day_2.h  day_3.h  day_4.cpp  day_4.h  day_5.cpp  day_6.cpp  day_6.h  day_7.cpp  day_7.h  day_8.cpp  day_8.h  day_9.cpp  day_9.h
solutions/2024/days_1_to_5/: day_1.cpp  day_1.h  day_2.cpp  day_2.h  day_3.cpp  day_3.h  day_4.cpp  day_5.h  day_6.cpp  day_6.h  day_7.cpp  day_7.h  day_8.cpp  day_8.h
utils/: array_iterators.h  array_node_iterators.h  array_node_wrapper.h  array_template.cpp  array_template.h  array_utils.h  input_reader.cpp  input_reader.h  maths_tools.cpp  maths_tools.h  precompile_header.h  solution.cpp  solution.h  solution_tools.cpp  solution_tools.h  std_extensions.h  string_tools.cpp  string_tools.h  utils.h  vector_2d.h  vector_3d.h  vector_tools.cpp  vector_tools.h
utils_tests/: array_template_iterator_tests.cpp  array_template_node_iterator_tests.cpp  array_template_tests.cpp  maths_tools_tests.cpp  solution_tools_tests.cpp  string_tools_tests.cpp  vector_tools_test.cpp  vector_tools_tests.cpp
